    in them, no exceptions allowed.  Other similarly bad filenames may
    later be forbidden by this policy.
  * UTF8Filenames moved to packagepolicy, where it belongs, and it now
    raises an error instead of printing a warning.
  * Conary now enforces the rule that tag names must have no whitespace
    and must be all alphanumeric characters, -, or _.

Changes in 0.60.9:
  * The changemail script is replaced by a generic commitaction script
    that loads modules, and a changemail.py module is supplied.  There is
    a backward-compatible changemail script which calls commitaction
    with the changemail.py module.  --email and --*user options now are
    changemail module options, so the commitAction should be specified
    something like this:
    commitAction /.../conary/commitaction --repmap ... --module "/.../conary/changemail --user %(user)s --email foo@example.com --email bar@example.com"
    You can add your own modules and run them all from the same commitaction
    using multiple --module arguments to the commitaction script.
  * Conary can now almost always guess the correct name for the mainDir
    when it is not %(name)s-%(version)s, if the first addArchive()
    instance creates exactly one top-level subdirectory and no other
    top-level files of any sort, in which case it will use that name as
    the mainDir.

Changes in 0.60.8:
  * The changemail script is now actually packaged, in
    /usr/lib{,64}/python2.4/site-packages/conary/changemail
  * Build requirements for superclasses are automatically added to 
    subclasses.
  * Build requirements now look at all labels in a version to see if they
    satisfy a build requirement.
  * The NormalizeManPages policy now automatically converts man pages
    encoded in iso-8859-1 to man pages encoded in utf-8.  Additionally,
    it runs faster and no longer calls sed.

Changes in 0.60.7:
  * The changemail script is now distributed with conary, and is called